causeway-dosx (3.72tk-build20230129-2~@distro@) @distro@; urgency=medium

  * Rebuild cw.lib from sources, with the help of David Lindauer's xlib.
  * Install cwc.exe.

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 29 Jan 2023 15:47:05 +0000

causeway-dosx (3.71tk-build20230122-1~@distro@) @distro@; urgency=medium

  * int 0x21, ah = 0x3f or 0x40, now uses ecx if it uses ds:edx.

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 22 Jan 2023 21:05:24 +0000

causeway-dosx (3.70tk-build20230106-1~@distro@) @distro@; urgency=medium

  * int 0x21, ah = 0x4b, now processes FCBs.

 -- TK Chia <tkchia@users.noreply.github.com>  Fri, 06 Jan 2023 22:06:45 +0000

causeway-dosx (3.69tk-build20230104-1~@distro@) @distro@; urgency=medium

  * Work around CWSDPMI's workaround for broken 16-bit DPMI clients.

 -- TK Chia <tkchia@users.noreply.github.com>  Wed, 04 Jan 2023 22:14:53 +0000

causeway-dosx (3.68tk-build20221226-1~@distro@) @distro@; urgency=medium

  * Fix: handle empty environment arrays with no strings, on program entry,
    and for int 0x21, ah = 0x4b.  (Thanks Stas Sergeev for the issue report.)

 -- TK Chia <tkchia@users.noreply.github.com>  Mon, 26 Dec 2022 10:34:37 +0000

causeway-dosx (3.67tk-build20221226-1~@distro@) @distro@; urgency=medium

  * Use UPX rather than (some version of) the CauseWay Compressor to
    compress the CauseWay loader stub.  This yields a smaller stub.

 -- TK Chia <tkchia@users.noreply.github.com>  Mon, 26 Dec 2022 01:35:40 +0000

causeway-dosx (3.66tk-build20221225-2~@distro@) @distro@; urgency=medium

  * Also install uncompressed CauseWay DOS extender stub.

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 25 Dec 2022 16:52:36 +0000

causeway-dosx (3.66tk-build20221225-1~@distro@) @distro@; urgency=medium

  * Bail out early if executable cannot read self (thanks Stas Sergeev for
    the issue report).

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 25 Dec 2022 08:50:22 +0000
